--- a/Exc2/tsconfig.json
+++ b/Exc2/tsconfig.json
@@ -68,5 +68,9 @@
     /* Advanced Options */
     "skipLibCheck": true,                           /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "exclude": [
+    "node_modules" // would be the default
+  ] // "include" - folders and files,
+  //  "files" - includes files only
 }
